sort.basic.gnome.AlgGnomeSort.scala.error
Compilation error:
AlgGnomeSort:12: error: illegal start of simple expression
      else {i+1=}
                ^AlgGnomeSort:15: error: 'while' expected but '}' found.
} 
^